EM-6790 fix code smells